# thisisaterminal

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.ps1  build.sh
tests/: test_commands.cpp
theshell/: commands.cpp  commands.h  main.cpp
